# macos-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
scripts/: fetch_kb.py
src/macos_automator_mcp/: __init__.py  __main__.py  kb.py  kb_data.json  models.py  server.py  tools.py
tests/: conftest.py  test_kb.py  test_server.py  test_tools.py
