[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'macos-mcp'
version = '0.1.0'
description = 'Python MCP server for macOS automation via AppleScript and JXA — 498-script knowledge base'
readme = 'README.md'
requires-python = '>=3.13'
license = { text = 'MIT' }
authors = [{ name = 'Yannick Stephan', email = 'stephan.yannick@me.com' }]
keywords = ['mcp', 'macos', 'applescript', 'jxa', 'automation']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Operating System :: MacOS',
]
dependencies = ['mcp>=1.0.0', 'pydantic>=2.0']

[project.optional-dependencies]
dev = [
    'pytest>=8.0',
    'pytest-asyncio>=0.24',
    'mypy>=1.0',
    'pyright>=1.1',
    'ruff>=0.9',
    'pre-commit>=4.0',
]

[project.scripts]
macos-mcp = 'macos_automator_mcp.__main__:main'

[tool.hatch.build.targets.wheel]
packages = ['src/macos_automator_mcp']

[tool.ruff]
line-length = 120
target-version = 'py313'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'N', 'W', 'UP']

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true

[tool.pyright]
pythonVersion = '3.13'
strict = true
venvPath = '.'
venv = '.venv'

[tool.mypy]
strict = true
python_version = '3.13'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']
